<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Series</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="titre">Series</string>
    <string name="TitleSerie">NomSerie</string>
    <string name="Genre">Genre :</string>
    <string name="Realisateur">Réalisateur :</string>
    <string name="Synopsis">Synopsis :</string>
    <string name="genre_titre">Genres</string>
    <string name="liste_de_series">Liste des Séries</string>
    <string name="liste_de_genres">Liste des Genres</string>

    <!-- Création d'une série -->
    <string name="creation_titre">Titre</string>
    <string name="creation_synopsis">Synopsis</string>
    <string name="creation_genre">Genre</string>
    <string name="creation_realisateur">Réalisateur</string>
    <string name="creation_image">Lien image</string>
    <string name="creation_trailer">Lien trailer</string>
    <string name="creation_ajouter">AJOUTER</string>
    <string name="creation_erreur">Une ou plusieurs informations sont manquantes.</string>
    <string name="creation_insert_error">Une erreur s\'est produite lors de l\'insertion.</string>
    <string name="creation_insert_success">Série ajoutée avec succès !</string>

    <!-- Detail d'une série -->
    <string name="detail_realisateur">Réalisateur : &#160;</string>
    <string name="detail_genre">Genre : &#160;</string>
    <string name="detail_synopsis">Synopsis :</string>
    <string name="detail_vue">Vue</string>

    <!-- Youtube -->
    <string name="youtube_api_key">AIzaSyDg6LMgy7HenrBBZdAkQMau0FkmzKFA51o</string>
    <string name="youtube_error">Une erreur s\'est produite lors de la lecture de la vidéo.</string>

</resources>
